# CppLuaBindingGenerator

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_tests.yml
Project/: CMakeLists.txt
Project/Generator/: CMakeLists.txt
Project/Generator/Include/: CppLuaBindCodeGenModule.h  CppLuaBindCodeGenModule.inl  LuaFuncPropertyCodeGen.h  LuaFuncPropertyCodeGen.inl  LuaProperty.h
Project/Generator/LibraryGenerator/: CMakeLists.txt  main.cpp
Project/Generator/Src/: main.cpp
Project/Include/: CppLuaBindCodeGenModule.h  CppLuaBindCodeGenModule.inl  LuaFuncPropertyCodeGen.h  LuaFuncPropertyCodeGen.inl  LuaProperty.h
Project/Src/: main.cpp
Project/Tests/: CMakeLists.txt  TestsSettings.toml  main.cpp
Project/Tests/Include/: Component.h  ELuaFunction.h  ELuaProperty.h  FileWatchListener.h
Project/Tests/LuaScripts/: Component.lua
Project/Tests/Src/: Component.cpp
